tests/ui/parser/removed-syntax/removed-syntax-field-let.stderr
error: expected identifier, found keyword `let`
  --> $DIR/removed-syntax-field-let.rs:2:5
   |
LL |     let foo: (),
   |     ^^^-
   |     |
   |     expected identifier, found keyword
   |     help: remove this `let` keyword
   |
   = note: the `let` keyword is not allowed in `struct` fields
   = note: see <https://doc.rust-lang.org/book/ch05-01-defining-structs.html> for more information

error: aborting due to 1 previous error

